# memd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PRD.md  README.md  install.sh
.github/workflows/: ci.yml  release-please.yml  release.yml
assets/skills/memd-doctor/: SKILL.md
assets/skills/memd-memory/: SKILL.md
docs/: architecture.mdx  cli.mdx  configuration.mdx  crawler.mdx  introduction.mdx  mcp.mdx  mint.json  quickstart.mdx
docs/superpowers/plans/: 2026-06-10-auto-update.md  2026-06-16-agent-auto-setup.md
docs/superpowers/specs/: 2026-06-10-auto-update-design.md  2026-06-15-memory-history-design.md  2026-06-16-agent-auto-setup-design.md
scripts/: install.sh
src/: cli.rs  config.rs  daemon.rs  history.rs  launchd.rs  main.rs  paths.rs
src/agents/: directives.rs  hooks.rs  mcp.rs  mod.rs  skills.rs
src/crawler/: mod.rs
src/mcp/: mod.rs  protocol.rs
src/meili/: client.rs  mod.rs
src/memory/: classify.rs  mod.rs  model.rs  service.rs
src/update/: check.rs  engine.rs  mod.rs  self_update.rs
